error fixed. swagger UI test code.
